--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -2,8 +2,7 @@ name: "Build and deploy"
 on:
   push:
     branches:
-      - master
-      - master
+      - main
     paths-ignore:
       - .gitignore
       - README.md
